[package]
name = "rust_ws"
version = "0.1.0"
edition = "2021"

# optional
[[bin]]
name = "rust_ws"
path = "src/main.rs"

[[bin]]
name = "helper"
path = "src/bin/helper.rs"

[[bin]]
name = "main2"
path = "src/bin/main2.rs"

# guessing_game
[[bin]]
name = "guessing_game"
path = "src/bin/guessing_game.rs"

# variables
[[bin]]
name = "variables"
path = "src/bin/3_1_variables.rs"

# compound types
[[bin]]
name = "compound_types"
path = "src/bin/3_2_compound_types.rs"

# functions
[[bin]]
name = "functions"
path = "src/bin/3_3_functions.rs"

# Control Flow
[[bin]]
name = "control_flow"
path = "src/bin/3_4_control_flow.rs"

# Ownership
[[bin]]
name = "ownership"
path = "src/bin/4_1_ownership.rs"

# struct
[[bin]]
name = "struct"
path = "src/bin/5_1_struct.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
